objects/Sindu__c.object
<CustomObject>
    <fields>
        <fullName>Ann1__c</fullName>
        <label>Ann1</label>
        <referenceTo>Ann1__c</referenceTo>
        <relationshipLabel>Sindus</relationshipLabel>
        <relationshipName>Sindus</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NoOfTickets__c</fullName>
        <label>NoOfTickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Sindu</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sindus</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>